a1/brendan_gordon/TEST_PROGRAMS/invalidtype/chia-wei_liu/invalid2.min
var x: string;
var y: string;
var z: int;

z = 0;

z = z + (x + y);


